[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stringkeys"
version = "0.4.4"
authors = [
    { name = "Eugen Hoppe", email = "rispe_keller0x@icloud.com" }
]
description = "Light cryptography encryption functionalities"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/eugen-hoppe/encryption" }

dependencies = [
    "cryptography==42.0.5"
]

[project.scripts]
stringkeys = "src.stringkeys.core:main"

[project.optional-dependencies]

[tool.setuptools]
package-dir = { "" = "src" }
packages = {"find" = { "where" = ["src"], "include" = ["*"] }}
include-package-data = true
